# moviname-backend

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: app.py  config.py
src/routers/: films.py
src/services/: llm_service.py
src/utils/: film_title_extractor.py  image_utils.py
