[project]
name = "movie-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "certifi>=2025.8.3",
    "cloudinary>=1.44.1",
    "fastapi[all]>=0.116.1",
    "google-genai>=1.50.1",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "yt-dlp>=2025.12.8",
]
